web-interface/public/static/css/dark.css
body {
    background-color: #111111;
    color: #e3e3e3;
}

h1, h2, h3, h4, h5, h6 {
    color: #e3e3e3;
}

a {
    color: #e3e3e3;
}

a:hover {
    color: #71769F;
}

code {
    color: #e3e3e3;
}

section.login div.left-half {
    background-color: #1d1e2c;
}

section.login .card {
    border: 0;
}

section.login label {
    color: #fff;
}

section.start div.main-card p {
    color: #fff;
}

section.start div.main-card li {
    margin-top: 6px;
    color: #fff;
}

nav.navbar {
    background-color: #262626;
}

div.card {
    background-color: #262626;
    border-color: #373737;
}

div.card div.card-number div.value a {
    color: #fff;
}

.table {
    color: #cccccc !important;
}

.table-striped > tbody > tr:nth-of-type(odd) > * {
    color: #cccccc !important;
}

.table-hover > tbody > tr:hover > * {
    color: #cccccc !important;
    background-color: #373737;
}

.btn-outline-primary {
    border-color: #fff;
    color: #fff;
}

.btn-outline-dark {
    border-color: #8D99AE;
    color: #8D99AE;
}

.btn-outline-dark:hover {
    border-color: #8D99AE;
    color: #8D99AE;
}

.alert-success {
    background-color: #174f35;
    border-color: #0c281b;
    color: #fff;
}

.alert-danger a {
    color: #000;
}

ol.breadcrumb {
    color: #aaa;
}

ol.breadcrumb a {
    color: #e3e3e3;
    text-decoration: underline;
}

ol.breadcrumb li.active {
    color: #aaa;
}

i.inline-help {
    color: #8D99AE;
}

div.modal-dialog div.modal-content {
    background-color: #2B2D42;
}

div.modal-dialog div.modal-content button.modal-close {
    background-color: #2B2D42;
    color: #fff;
}

table tr.table-span-heading td {
    --bs-table-accent-bg: #2B2D42 !important;
    border-bottom: 1px solid #fff;
}

p.help-text {
    color: #c7c7c7;
}

button.btn-text {
    color: #fff;
    text-decoration: underline;
}

button.btn-text:hover {
    background-color: transparent;
    color: #71769F;
}

button.btn-text:focus {
    background-color: transparent;
    color: #71769F;
}

span.highlighted {
    background-color: #ffff9a;
    color: #000;
}

a.highlighted {
    color: #000;
}

span.highlighted a {
    color: #000;
}

span.highlighted i {
    color: #fff !important;
}

div.context-overlay {
    background-color: #373737;
    box-shadow: 0 0 8px 3px #1a1a1a;
    border-color: #1a1a1a;
}

span.context-name {
    color: #000;
    background-color: #ffff9a;
}

i.additional-context-available {
    color: #71769F;
}

div.rendered-markdown pre {
    background-color: #40435e;
}

a.card-title-option,
button.card-title-option {
    color: #fff;
}

a.card-title-option:hover,
button.card-title-option:hover {
    color: #71769F;
}

button.accordion-button:not(.collapsed) {
    background-color: #40435e;
    color: #fff;
}

button.accordion-button {
    background-color: #313349;
    color: #fff;
}

div.accordion-item h2 {
    background-color: #12131c;
}

div.accordion-item {
    background-color: #2B2D42;
}

.sticky-head-table thead th {
    background-color: #1a1a1a;
}

a span.port {
    color: #71769F;
}

span.fi-none {
    background-color: #7e808d;
}

input.form-control {
    background-color: #e9ecef !important;
    border-color: #e3e3e3;
    color: #000 !important;
}

.form-control:focus {
    border-color: #eaeaea;
    box-shadow: none !important;
}

button.btn-outline-primary, a.btn-outline-primary {
    background-color: inherit;
    border-color: #e3e3e3;
    color: #e3e3e3;
}

button.btn-outline-primary:hover, a.btn-outline-primary:hover {
    background-color: #111111;
    border-color: #e3e3e3;
}

button.btn-outline-secondary, a.btn-outline-secondary {
    background-color: inherit;
    border-color: #aaa;
    color: #aaa;
}

button.btn-outline-secondary:hover, a.btn-outline-secondary:hover {
    border-color: #aaa;
    color: #aaa;
    background-color: #111;
}

button.btn-link {
    color: #e3e3e3;
}

span.main-active-channel {
    border-color: #7e808d;
}

.bg-danger {
    background-color: #c23b4c;
}

.text-danger {
    color: #c23b4c;
}

.alert-danger {
    background-color: #c23b4c;
    color: #e3e3e3;
    border-color: #c23b4c;
}

.alert-warning {
    background-color: #d7cba5;
    color: #111;
    border-color: #d7cba5;
}

.alert-info {
    background-color: #a8d5de;
}

.nav-tabs a.nav-link {
    color: #e3e3e3;
}

.nav-tabs a.nav-link:hover {
    color: #e3e3e3;
    border-color: #aaa;
}

.nav-tabs a.active {
    background-color: #aaa;
    color: #111;
}

.nav-tabs a.active:hover {
    color: #111;
}

.form-select:disabled, input.form-control:disabled {
    background-color: #505050 !important;
    border-color: #505050 !important;
    color: #111 !important;
}

button.btn-primary:disabled {
    background-color: #1524a6;
    border-color: #1524a6;
}

ul.pagination li.page-item a.page-link {
    background-color: #505050;
    border-color: #505050;
    color: #fff;
}

ul.pagination li.page-item a.page-link:hover {
    color: #71769F;
}

ul.pagination li.disabled a.page-link {
    color: #7e7e7e;
}

div.tap-secret label {
    color: #111;
}

.leaflet-layer,
.leaflet-control-zoom-in,
.leaflet-control-zoom-out,
.leaflet-control-zoom-fullscreen,
.leaflet-control-attribution {
    filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
}

.leaflet-container {
    background: #000
}

th i.order-icon {
    margin-left: 5px;
    cursor: pointer;
    color: #7e7e7e;
}

th:hover i.order-icon,
th i.order-icon-selected {
    color: #fff;
}

